[tool.poetry]
name = "options-price"
version = "0.0.0"
description = ""
authors = ["Poliana Morishigue <poliana.morishigue@infinityworks.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.9"
boto3 = "^1.23.3"
click = "^8.1.3"
pylint = "^2.13.9"
PyYAML = "^6.0"
click-log = "^0.4.0"
pytest = "^7.1.2"
parameterized = "^0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
options-price = "options_price.cli:main"